--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>{% block title %}{% endblock %}</title>
-  <style>{% block styles %}{% endblock %}</style>
+  <style>
+    .navbar {
+      background-color: #202F2D;
+      padding: 20px;
+    }
+
+    .navbar a {
+        color: white !important;
+    }
+
+    .navbar-toggler-icon {
+        filter: invert(1);  /* Makes the default icon white */
+    }
+
+    .navbar-toggler {
+    background-color: transparent; /* Keeps button transparent */
+    border: 2px solid black; /* White border */
+    padding: 5px; /* Adds some spacing */
+    }
+
+    .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    }
+
+    {% block styles %}
+    {% endblock %}
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
