--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
 
     <style>
@@ -57,38 +57,47 @@
             margin-bottom: 6px;
             width: 100px;
         }
-
-        #flash-msgs {
-            color: #bc8686;
-            text-align: center;
-        }
     </style>
 </head>
 <body>
     <div class="Login-container">
-        <div id="flash-msgs">
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for msg in messages %}
-                        <p>{{msg}}</p>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-        </div>
-        <h2 class="text-center">Login</h2>
-        <form action="/login" method="post">
+        <h2 class="text-center">Register</h2>
+        <form action="/register" method="post">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" required>
             </div>
             <div class="form-group">
+                
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required>
             </div>
-            <button type="submit" class="btn">Login</button>
+            <div class="form-group">
+                <div class="row justify-content-center">
+                    <!-- Gender Field -->
+                    <div class="col-6 col-sm-5">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name" required>   
+                    </div>     
+                    <div class="col-6 col-sm-5">
+                        <label for="gender">Gender</label>
+                        <select class="form-control" id="gender" name="gender" required>
+                            <option value="" disabled selected>Select Gender</option>
+                            <option value="M">Male</option>
+                            <option value="F">Female</option>
+                            <option value="O">Other</option>
+                        </select>
+                    </div>
+                    <div class="col-6 col-sm-5">
+                        <label for="dob">Date of Birth</label>
+                        <input type="date" class="form-control" id="dob" name="dob" required>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn">Register</button>
         </form>
         <h5 class="text-center">Doesn't have account yet?</h5>
-        <a href="/register" class="btn" id="register-btn">Register</a>
+        <a href="/login" class="btn" id="register-btn">Login</a>
     </div>
 </body>
 </html>
