--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,32 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>{% block title %}{% endblock %}</title>
   <style>
+    .navbar {
+      background-color: #202F2D;
+        padding: 20px;
+    }
+
+    .navbar a {
+        color: white !important;
+    }
+
+    .navbar-toggler-icon {
+        filter: invert(1);  /* Makes the default icon white */
+    }
+
+    .navbar-toggler {
+        background-color: transparent; /* Keeps button transparent */
+        border: 2px solid black; /* White border */
+        padding: 5px; /* Adds some spacing */
+    }
+
+    .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    }
+
+    body {
+        background-color: #202F2D;
+    }
     {% block styles %}
     {% endblock %}
   </style>
@@ -27,7 +53,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown link
             </a>
@@ -36,7 +62,7 @@
               <a class="dropdown-item" href="#">Another action</a>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
   </nav>
