--- a/templates/home.html
+++ b/templates/home.html
@@ -1,70 +1,6 @@
 {% extends "base.html" %}
+{% block extra_css %} <link rel="stylesheet" href="{{ url_for ('static', filename='css/home.css') }}"> {% endblock %}
 {% block title %}The Searcher{% endblock %}
-
-{% block styles %}
-    #MainTitle {
-        margin-top: 20px;
-        color: #CACACA;
-    }
-
-    #abouttitle {
-        text-align: left;
-        margin: 0px;
-        margin-bottom: 10px;
-    }
-
-    #LoginBTN {
-        display: flex;
-        justify-content: center;
-        align-items: center; 
-        background-color: #1DB954;
-        color: Black;
-        font-family: "Arial Black";
-        padding: 10px 0px;
-        width: 380px;
-        height: 15px
-        border: none;
-        border-radius: 50px;
-        box-sizing: border-box;
-        cursor: pointer;
-        font-size: 20px;
-        margin: 0 auto;
-        margin-bottom: 50px;
-        text-decoration: none;
-    }
-
-    #LoginBTN:hover {
-        background-color: #17a34a; /* Darker Green on Hover */
-    }
-
-    .maincontainer {
-        width: 80%;
-        max-width: 700px;
-        margin: 0 auto;
-        padding: 20px;
-        text-align: center;
-        background-color: #f8f8f8;
-        border-radius: 10px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        background-color: #202528;
-    }
-
-    .Title {
-        text-align: center;
-        margin: 50px;
-        color: #CACACA;
-    }
-
-    .Pharagraph {
-        text-align: left;
-        color: #CACACA;
-    }
-
-    #flash-msgs {
-        color: white;
-        text-align: center;
-    }
-{% endblock %}
 
 {% block content %}
     <div class="maincontainer">
@@ -77,12 +13,20 @@
                 {% endif %}
             {% endwith %}
         </div>
-        <h1 class="Title", id="MainTitle"><b>Hello There Welcome to <br/>The Spotify Searcher</b></h1>
+        <h1 class="Title", id="MainTitle"><b>Hello There Welcome to <br/>The Spotify Tools</b></h1>
         <h2 id="abouttitle" class="Title">About</h2>
         <p class="Pharagraph">
-            The Spotify Searcher is web application you can search for song and will get the <br/>spotify link along with the information about the song
-        </p>   
-        <h2 class="Title">Please login to proceed</h2>
-        <a href="/login" id="LoginBTN">Login</a>
+            SpotTools is a web aplication to help you with various thing about spotify music<br />As example looking the right song, downloading the song and much more
+        </p>  
+        <div class="feature">
+            <div class="searcher">
+                <h3 class="Title" id="search-Title"><b>Looking For a Song?</b></h3>
+                <a href="/searcher" class="BTN" id="search-BTN">Search</a>
+            </div>
+            <div class="downloader">
+                <h3 class="Title" id="download-Title"><b>Download Some Music Now</b></h3>
+                <a href="/downloader" class="BTN" id="download-BTN">Download</a>
+            </div>
+        </div> 
     </div>
 {% endblock %}
