--- a/templates/login.html
+++ b/templates/login.html
@@ -5,64 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for ('static', filename='css/login.css') }}">
 
-    <style>
-        body {
-            background-color: #202F2D;
-            color : #CACACA;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .Login-container {
-            margin-top: 50px;
-            margin-bottom: 50px;
-            background-color: #202528;
-            padding: 30px;
-            border-radius: 20px;
-            width: 100%;
-            max-width: 450px;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
-        }
-
-        .form-control {
-            background: rgb(28, 26, 26);
-            color: white;
-            border: none;
-            font-family: "Ahorani";
-        }
-
-        .form-control::placeholder {
-            color: #1DB954;
-        }
-
-        .btn {
-            display: block;
-            margin: 0 auto;
-            margin-top: 25px;
-            margin-bottom: 25px;
-            width: 150px;
-            background-color: #1DB954;
-            color: Black;
-            font-family: "Arial Black";
-        }
-        
-        .btn:hover {
-            background-color: #1e8644; /* Darker Green on Hover */
-        }
-
-        #register-btn {
-            margin-bottom: 6px;
-            width: 100px;
-        }
-
-        #flash-msgs {
-            color: #bc8686;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <div class="Login-container">
