--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="Login-container">
+    <div class="Register-container">
         <h2 class="text-center">Register</h2>
         <form action="/register" method="post">
             <div class="form-group">
