Everything works perfectly with account_delete as well

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,8 @@
               Other
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Contact</a>
-              <a class="dropdown-item" href="#">Delete account</a>
+              <a class="dropdown-item" href="mailto:workacounting001@gmail.com">Contact</a>
+              <a class="dropdown-item" href="/acount_delete">Delete account</a>
             </div>
           </li>
         </ul>
