--- a/templates/download.html
+++ b/templates/download.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block extra_css %} <link rel="stylesheet" href="{{ url_for ('static', filename='css/download.css') }}"> {% endblock %}
-{% block title %}The Searcher{% endblock %}
+{% block title %}The Downloader{% endblock %}
 
 {% block content %}
     <div class="maincontainer">
