--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block extra_css %} <link rel="stylesheet" href="{{ url_for ('static', filename='css/home.css') }}"> {% endblock %}
-{% block title %}The Searcher{% endblock %}
+{% block title %}SpotLoader{% endblock %}
 
 {% block content %}
     <div class="maincontainer">
@@ -13,10 +13,10 @@
                 {% endif %}
             {% endwith %}
         </div>
-        <h1 class="Title", id="MainTitle"><b>Hello There Welcome to <br/>The Spotify Tools</b></h1>
+        <h1 class="Title", id="MainTitle"><b>Hello There Welcome to <br/>SpotLoader</b></h1>
         <h2 id="abouttitle" class="Title">About</h2>
         <p class="Pharagraph">
-            SpotTools is a web aplication to help you with various thing about spotify music<br />As example looking the right song, downloading the song and much more
+            SpotLoader is a web aplication to help you with various thing about spotify music<br />As example looking the right song, and downloading the song
         </p>  
         <div class="feature">
             <div class="searcher">
